//------------------------------------------------------------------------
// * @filename: NetworkModule.h
// *
// * @brief: 网络模块
// *
// * @author: XGM
// * @date: 2018/12/27
//------------------------------------------------------------------------
#pragma once

#include "xbase/Module.h"

class NetworkModule : public Module
{
public:
	//------------------------------------------------------------------------
	// 模块名称
	//------------------------------------------------------------------------
	virtual std::string GetName() override;

	//------------------------------------------------------------------------
	// 初始化
	//------------------------------------------------------------------------
	virtual bool Init() override;

	//------------------------------------------------------------------------
	// 退出
	//------------------------------------------------------------------------
	virtual void Exit() override;

	//------------------------------------------------------------------------
	// 运行一次
	//------------------------------------------------------------------------
	virtual void RunOnce() override;
};
